HiFi4 固件 + rpmsg

--- a/FreeRTOS-HIFI4-DSP/Makefile
+++ b/FreeRTOS-HIFI4-DSP/Makefile
@@ -53,6 +53,7 @@ LIBS =  -L ./lib/  -lxtutil  -lhandler-reset -lc -lgloss -lhal -lm -lgcc -lc
 
 APP_SRC := src/main
 APP_SRC += src/msgbox
+APP_SRC += src/resource_table
 
 BENCHMARK_SRC := benchmark/linpack-pc
 BENCHMARK_SRC += benchmark/dhry_1
